# PhysicsVisualizer

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
includes/: projectile_simulation.h  refraction_simulation.h  shader_utils.h  simulation_base.h
shaders/: base.vert  projectile.frag  projectile.vert  refraction.vert
src/: config.h  glad.c  main.cpp  projectile_simulation.cpp  refraction_simulation.cpp  shader_utils.cpp  simulation_base.cpp  triangle_mesh.cpp  triangle_mesh.h
